[optimize]: optimize the generation of att columns